Diretório das imagens atualizado

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="menu">
                 <a class="logo" href="#">
                     <img
-                        src="/Assets/worldwide 1 (Traced).svg"
+                        src="Assets/worldwide 1 (Traced).svg"
                         alt="Logo Optimus Tech"
                         class="menu__logo"
                     />
@@ -99,7 +99,7 @@
                 </p>
                 <img
                     class="talentos-imagem"
-                    src="/Assets/Image.jpg"
+                    src="Assets/Image.jpg"
                     alt="Pessoas trabalhando na OptimusTech"
                 />
             </section>
@@ -163,7 +163,7 @@
 
                 <img
                     class="depoimentos__imagem"
-                    src="/Assets/Avatar.jpg"
+                    src="Assets/Avatar.jpg"
                     alt="Imagem de perfil da colaboradora"
                 />
                 <p class="depoimentos__perfil">Júlia Castro</p>
